--- a/info.yaml
+++ b/info.yaml
@@ -29,19 +29,19 @@ documentation:
   inputs:               # a description of what the inputs do
     - clock
     - reset
-    - none
+    - spi_miso
     - none
     - none
     - none
     - none
     - none
   outputs:
-    - segment a         # a description of what the outputs do
-    - segment b
-    - segment c
-    - segment d
-    - segment e
-    - segment f
-    - segment g
+    - spi_cs0
+    - spi_cs1
+    - spi_clk
+    - spi_mosi
+    - none
+    - none
+    - none
     - none
 
