--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -18,12 +18,22 @@ jobs:
     - name: setup python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.7.13'
+        python-version: '3.10'
     - run: pip install requests PyYAML
 
     # fetch the Verilog from Wokwi API
     - name: fetch Verilog and build config
       run: ./configure.py --check-docs
+
+    # pandoc deps
+    - name: Pandoc deps
+      run: | 
+        sudo apt-get update -y
+        sudo apt-get install -y pandoc texlive-xetex
+
+    # fetch the Verilog from Wokwi API
+    - name: build datasheet
+      run: ./configure.py --build-pdf
 
     # make an artifact
     - name: upload artifact
@@ -31,3 +41,10 @@ jobs:
       with:
           name: docs
           path: info.yaml
+
+    # archive the PDF
+    - name: Archive PDF
+      uses: actions/upload-artifact@v3
+      with:
+          name: PDF
+          path: datasheet.pdf
