--- a/.github/workflows/gds.yaml
+++ b/.github/workflows/gds.yaml
@@ -19,6 +19,8 @@ jobs:
     # need the repo checked out
     - name: checkout repo
       uses: actions/checkout@v3
+      with:
+        submodules: recursive
 
     # build PDK and fetch OpenLane
 
@@ -33,7 +35,7 @@ jobs:
     - name: setup python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.7.13'
+        python-version: '3.10'
     - run: pip install requests PyYAML
 
     # fetch the Verilog from Wokwi API
@@ -78,7 +80,7 @@ jobs:
         path: runs
         key: ${{ runner.os }}-runs-${{ github.run_id }}
 
-  svg:
+  png:
     needs: gds
     runs-on: ubuntu-latest
     steps:
@@ -109,11 +111,19 @@ jobs:
         top_cells[0].write_svg('gds_render.svg')
         EOF
 
-    - name: populate svg cache
+    - name: convert to png
+      run: |
+        python -m pip install cairosvg
+        python << EOF
+        import cairosvg
+        cairosvg.svg2png(url='gds_render.svg', write_to='gds_render.png')
+        EOF
+
+    - name: populate png cache
       uses: actions/cache@v3
       with:
-        path: 'gds_render.svg'
-        key: ${{ runner.os }}-svg-${{ github.run_id }}
+        path: 'gds_render.png'
+        key: ${{ runner.os }}-png-${{ github.run_id }}
 
   viewer:
     needs: gds
@@ -177,7 +187,7 @@ jobs:
 
   pages:
     needs:
-    - svg
+    - png
     - viewer
     environment:
       name: github-pages
@@ -186,11 +196,11 @@ jobs:
       page_url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-    - name: restore svg cache
+    - name: restore png cache
       uses: actions/cache@v3
       with:
-        path: 'gds_render.svg'
-        key: ${{ runner.os }}-svg-${{ github.run_id }}
+        path: 'gds_render.png'
+        key: ${{ runner.os }}-png-${{ github.run_id }}
     - name: restore viewer cache
       uses: actions/cache@v3
       with:
@@ -234,7 +244,7 @@ jobs:
         PAGE_URL=$(echo "$PAGE_URL" | sed -e 's/\/$//')
         cat << EOF >> $GITHUB_STEP_SUMMARY
         # layout
-        ![svg]($PAGE_URL/gds_render.svg)
+        ![png]($PAGE_URL/gds_render.png)
         # viewer
         [open preview](https://gds-viewer.tinytapeout.com/?model=$PAGE_URL/tinytapeout.gds.gltf)
         EOF
